syntax="proto3";

package groupcachepb;

option go_package = "github.com/hmmm42/g-cache/internal/genproto/groupcachepb";

message GetRequest {
  string group = 1;
  string key = 2;
}

message GetResponse {
  bytes value = 1;
}

service GroupCache {
  rpc Get(GetRequest) returns (GetResponse);
}